--- a/houtask-react/src/assets/main.css
+++ b/houtask-react/src/assets/main.css
@@ -5,9 +5,9 @@ body, html {
     height: 100vh;
     font-family: "Montserrat", sans-serif;
 
-    background-color: #14363a;
+    background-color: #000000;
     color: #ffffff;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
 
     --width-sidebar: 340px;
@@ -15,10 +15,39 @@ body, html {
     --gap-contentbar: 10px;
 }
 
+textarea {
+    resize: none;
+    border: 2px solid black;
+    border-radius: 4px;
+
+    color: white;
+
+    background-color: #136468;
+}
+
+textarea:focus {
+    outline: 0px;
+}
+
+select {
+    border: 2px solid black;
+    border-radius: 4px;
+
+    font-weight: 700;
+
+    background-color: #136468;
+    color: white;
+}
+
+select:focus {
+    outline: 0px;
+}
+
+
 .sidebar {
     width: var(--width-sidebar);
     height: 100vh;
-    background-color: #5997AB;
+    background-color: #29A143;
 }
 
 .contentbar {
@@ -34,6 +63,8 @@ body, html {
     height: calc(100vh - calc(var(--margin-contentbar) * 2));
     width: calc(100vw - var(--width-sidebar) - calc(var(--margin-contentbar) * 2));
 
+    font-weight: 700;
+
     overflow: hidden;
     text-align: center;
 
@@ -46,7 +77,7 @@ body, html {
 }
 
 .contentbar__new-task {
-    background-color: #8060da;
+    background-color: #1C969C;
     height: var(--heigth-new-task);
 
     border-radius: 10px;
@@ -55,7 +86,7 @@ body, html {
 }
 
 .contentbar__last-tasks {
-    background-color: #237ed3;
+    background-color: #1C969C;
     height: var(--heigth-last-tasks);
 
     border-radius: 10px;
@@ -65,7 +96,12 @@ body, html {
 
 .contentbar__new-content{
     display: flex;
+
+    flex-direction: column;
+    justify-content: space-between;
+
     width: 100%;
+    height: 94%;
 }
 
 .contentbar__new-content-section {
@@ -73,10 +109,58 @@ body, html {
 
     font-size: 24px;
 
-    margin: 10px auto 0 auto;
+    margin: 0 auto;
     flex-direction: column;
 }
 
 .contentbar__new-content-desc {
-    
+    display: flex;
+
+    font-size: 24px;
+
+    margin: 0 auto;
+    flex-direction: column;
+}
+
+.contentbar__new-content-tags {
+    display: flex;
+
+    font-size: 24px;
+
+    margin: 0 auto;
+    flex-direction: column;
+}
+
+.contentbar__new-content-starttask {
+    display: flex;
+
+    width: 190px;
+    height: 50px;
+
+    margin: 0 auto;
+    flex-direction: column;
+}
+
+.contentbar__new-content-starttask > button {
+    font-size: 24px;
+
+    color: white;
+    background-color: #204B4D;
+
+    border: 0px;
+    border-radius: 10px;
+
+    /* transition: ; */
+    transition: box-shadow 800ms, transform 400ms;
+
+    width: 100%;
+    height: 100%;
+}
+
+.contentbar__new-content-starttask > button:hover {
+    cursor: pointer;
+
+    box-shadow: 0px 0px 48px #43d4db;
+
+    transform: scale(1.05);
 }
