--- a/houtask-react/src/assets/main.css
+++ b/houtask-react/src/assets/main.css
@@ -5,7 +5,7 @@ body, html {
     height: 100vh;
     font-family: "Montserrat", sans-serif;
 
-    background-color: #2b2626;
+    background-color: #32313a;
     color: #ffffff;
     font-size: 14px;
     font-weight: 500;
@@ -22,7 +22,7 @@ textarea {
 
     color: white;
 
-    background-color: #136468;
+    background-color: #5f6868;
 }
 
 textarea:focus {
@@ -35,7 +35,7 @@ select {
 
     font-weight: 700;
 
-    background-color: #136468;
+    background-color: #5f6868;
     color: white;
 }
 
@@ -70,19 +70,15 @@ select:focus {
 }
 
 .contentbar__new-task {
-    background: linear-gradient(113deg, rgba(13,148,103,1) 0%, rgba(26,173,149,1) 41%, rgba(28,150,156,1) 100%);
+    background-color: rgb(88, 87, 92);
     height: var(--heigth-new-task);
-
-    border-radius: 10px;
 
     width: 100%;
 }
 
 .contentbar__last-tasks {
-    background: linear-gradient(113deg, rgba(13,148,103,1) 0%, rgba(26,173,149,1) 41%, rgba(28,150,156,1) 100%);
+    background-color: rgb(88, 87, 92);
     height: var(--heigth-last-tasks);
-
-    border-radius: 10px;
 
     width: 100%;
 }
@@ -138,9 +134,9 @@ select:focus {
     font-size: 24px;
 
     color: white;
-    background-color: #204B4D;
+    background-color: #5f6868;
 
-    border: 0px;
+    border: 2px solid black;
     border-radius: 10px;
 
     /* transition: ; */
@@ -153,7 +149,8 @@ select:focus {
 .contentbar__new-content-starttask > button:hover {
     cursor: pointer;
 
-    box-shadow: 0px 0px 48px #43d4db;
+    box-shadow: 0px 0px 48px  #ffffff;
+    ;
 
     transform: scale(1.05);
 }
@@ -218,10 +215,8 @@ select:focus {
 }
 
 .contentbar__goals {
-    background: linear-gradient(113deg, rgba(13,148,103,1) 0%, rgba(26,173,149,1) 41%, rgba(28,150,156,1) 100%);
+    background-color: rgb(88, 87, 92);
 
     width: 100%;
     height: 100%;
-
-    border-radius: 10px;
 }
