--- a/houtask-react/src/components/ListBar/ListBar.module.css
+++ b/houtask-react/src/components/ListBar/ListBar.module.css
@@ -3,6 +3,7 @@
     
     background-color: rgb(78, 78, 78);
 
+    gap: 2px;
 
     width: calc(100%);
     height: 20px;
@@ -13,6 +14,8 @@
 
     padding: 0 4px;
     font-weight: 600;
+
+    border-bottom: 2px solid rgb(59, 59, 59);
 
     cursor: pointer;
 }
