--- a/houtask-react/src/assets/main.css
+++ b/houtask-react/src/assets/main.css
@@ -66,7 +66,12 @@ select:focus {
 }
 
 .contentbar > div {
+    display: flex;
+
+    flex-direction: column;
+
     padding: 0 5px;
+    padding-bottom: 5px;
     box-sizing: border-box;
 }
 
