add functoin of change month in calendar

--- a/houtask-react/src/components/UI/CalendarOfActive/CalendarOfActive.module.css
+++ b/houtask-react/src/components/UI/CalendarOfActive/CalendarOfActive.module.css
@@ -7,15 +7,26 @@
 }
 
 .calendar__content {
-    display: grid;
+    display: flex;
+
+    flex-direction: column;
 
     width: 500px;
     height: 300px;
 
+    background-color: antiquewhite;
+}
+
+.calendar__content_days {
+    display: grid;
+
+    height: 70%;
+    width: 70%;
+
     grid-template-columns: repeat(7, 1fr);
     gap: 10px;
 
-    background-color: antiquewhite;
+    background-color: rgb(199, 181, 158);
 }
 
 .day {
